--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ManagerTourActivity" />
+        <activity android:name=".AddPlaceActivity" />
+        <activity android:name=".EditPlaceActivity"></activity>
     </application>
 
 </manifest>
