--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".ManagerTourActivity" />
         <activity android:name=".AddPlaceActivity" />
-        <activity android:name=".EditPlaceActivity"></activity>
+        <activity android:name=".EditPlaceActivity" />
+        <activity android:name=".DetailTourActivity"></activity>
     </application>
 
 </manifest>
