--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".AddPlaceActivity" />
         <activity android:name=".EditPlaceActivity" />
         <activity android:name=".DetailTourActivity"></activity>
+        <activity android:name=".DetailPersonalActivity"></activity>
+        <activity android:name=".PasswordActivity"></activity>
     </application>
 
 </manifest>
