--- a/Code Project/DuLichDoDay/app/build.gradle
+++ b/Code Project/DuLichDoDay/app/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.firebase:firebase-storage:12.0.1'
+    compile 'com.google.firebase:firebase-auth:12.0.1'
+    compile 'com.google.firebase:firebase-database:12.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
+apply plugin: 'com.google.gms.google-services'
