Update 2 acivity login and registration
Update 2 acivity login and registration

--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".DetailTourActivity" />
         <activity android:name=".DetailPersonalActivity" />
         <activity android:name=".PasswordActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegistrationActivity"/>
         <activity android:name=".DialogComment"></activity>
     </application>
 
