--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/key_map" />
@@ -17,11 +16,6 @@
         <activity
             android:name=".MainLayoutActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ManagerTourActivity" />
         <activity android:name=".AddPlaceActivity" />
@@ -29,9 +23,14 @@
         <activity android:name=".DetailTourActivity" />
         <activity android:name=".DetailPersonalActivity" />
         <activity android:name=".PasswordActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegistrationActivity"/>
-        <activity android:name=".DialogComment"></activity>
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
