--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -15,14 +15,7 @@
 
         <activity
             android:name=".MainLayoutActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".ManagerTourActivity" />
-        <activity android:name=".AddPlaceActivity" />
-        <activity android:name=".EditPlaceActivity" />
-        <activity android:name=".DetailTourActivity" />
-        <activity android:name=".DetailPersonalActivity" />
-        <activity android:name=".PasswordActivity" />
+            android:label="@string/app_name" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +23,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".DetailTourActivity" />
+        <activity android:name=".DetailPersonalActivity" />
+        <activity android:name=".PasswordActivity" />
+        <activity android:name=".BusinessActivity" />
+        <activity android:name=".DetailBusinessActivity" />
+        <activity android:name=".UpdateInforBusinessActivity" />
+        <activity android:name=".ManagerTourActivity" />
+        <activity android:name=".AddPlaceActivity" />
+        <activity android:name=".EditPlaceActivity" />
+        <activity android:name=".TourListActivity">
+
+        </activity>
     </application>
 
 </manifest>
