--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
             android:name=".MainLayoutActivity"
             android:label="@string/app_name" />
         <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".DetailTourActivity" />
@@ -29,16 +33,8 @@
         <activity android:name=".ManagerTourActivity" />
         <activity android:name=".AddPlaceActivity" />
         <activity android:name=".EditPlaceActivity" />
-        <activity android:name=".TourListActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ManagerBookingTourActivity">
-
-        </activity>
+        <activity android:name=".TourListActivity"></activity>
+        <activity android:name=".ManagerBookingTourActivity"></activity>
     </application>
 
 </manifest>
