--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -23,14 +23,13 @@
         <activity
             android:name=".MainLayoutActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".LoginActivity">
-
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".DetailTourActivity" />
@@ -45,6 +44,7 @@
         <activity android:name=".TourListActivity" />
         <activity android:name=".ManagerBookingTourActivity" />
         <activity android:name=".BookTour"/>
+        <activity android:name=".UpdateInforActivity"/>
     </application>
 
 </manifest>
