--- a/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
+++ b/Code Project/DuLichDoDay/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
 
         <activity
             android:name=".MainLayoutActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name">
+
+        </activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +31,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".DetailTourActivity" />
+        <activity android:name=".DetailTourActivity" >
+        </activity>
         <activity android:name=".DetailPersonalActivity" />
         <activity android:name=".PasswordActivity" />
         <activity android:name=".BusinessActivity" />
