--- a/Code Project/DuLichDoDay/app/build.gradle
+++ b/Code Project/DuLichDoDay/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-storage:12.0.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
@@ -35,10 +38,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:12.0.1'
     compile "com.google.android.gms:play-services-location:12.0.1"
     compile 'com.google.android.gms:play-services-places:12.0.1'
-    compile 'com.google.firebase:firebase-core:12.0.1'
-    compile 'com.google.firebase:firebase-storage:12.0.1'
-    compile 'com.google.firebase:firebase-auth:12.0.1'
-    compile 'com.google.firebase:firebase-database:12.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
